Minor fix v1.0.4
- Fix Controller2D behavior, to make sure it properly reset applying velocity in physic control mode
- Add method to resetMovment for PhysicBody2D.
- Fix a typo in CharacterBody2D that prevent updating velocity via addMovement method.
- Fix RayCastInfo missing mask and layer check for collision object.
- Bump API version to 1.0.4